2023-05-30: [FEATURE] Refactored code into a Python module.
Changes:
- Move processing, trainging, and inferring code to harpspec.py
- Create harpspeccli.py wrapper around harpspec.py functions
- Add pyptoject.toml with project metadata
- Add notebooks/example.ipynb with example usage

--- a/notebooks/get-spectra.ipynb
+++ b/notebooks/get-spectra.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3926bcbf-2060-48a4-92e2-6ee962ea84be",
+   "metadata": {},
+   "source": [
+    "This is a notebook file for obtaining spectra to train HARPSpec from the ESO TAP service.\n",
+    "\n",
+    "This notebook requires PyVO to be installed to run properly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f8646144",
@@ -77,48 +87,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13822fd",
+   "id": "d22b7810-6ca9-423a-a5d5-51a45396e235",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp_ids = get_dpids(targets, 5, lambda x: True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b334c2be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(dp_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9d4958e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "folder = '../data/fits_SNR0x5'\n",
+    "label_file = '<csv file with targets and labels here>'\n",
+    "folder = '<destination folder>'\n",
+    "\n",
+    "dp_ids = get_dpids(targets, 1, lambda x: True)\n",
     "download_spectra( dp_ids, folder )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c595c932",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_file = '../data/HARPS_masterlist_use.csv'\n",
-    "\n",
-    "targets = get_targets(label_file)\n",
-    "\n",
-    "print(targets)"
    ]
   }
  ],
